--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="col-md-1 col-lg-2"></div>
                     <div class="col-md-10 col-lg-8">
                         <div class="intro">
-                            <div class="profile-img"><img src="avatar.png" alt=""></div>
+                            <div class="profile-img"><img src="imgs/avatar.png" alt=""></div>
                             <h2><b>Mohamed Elsayed</b></h2>
                             <h4 class="font-yellow">Front-end Developer</h4>
                             <ul class="information margin-tb-30">
@@ -120,7 +120,7 @@
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://confident-thompson-c5ea7b.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../img/affiliate.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("../imgs/affiliate.png");'>
                                 </div>
                             </a>
                         </div>
@@ -128,14 +128,14 @@
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://angry-haibt-965b5a.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../img/bandeja.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("../imgs/bandeja.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://dazzling-fermat-e7d4cb.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../img/blueray.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("../imgs/blueray.png");'></div>
                             </a>
                         </div>
                     </div>
@@ -143,21 +143,21 @@
                         <div class="my-work h-100">
                             <a class='target' href="https://vigorous-cori-ee1d4c.netlify.com/#secondPage"
                                 target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../img/boho.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("../imgs/boho.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://naughty-lewin-fb311b.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../img/foton.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("../imgs/foton.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://kind-einstein-ed8b3f.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../img/icons.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("../imgs/icons.png");'></div>
                             </a>
                         </div>
                     </div>
@@ -165,14 +165,14 @@
                         <div class="my-work h-100">
                             <a class='target' href="https://lucid-lichterman-35a974.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap"
-                                    style='background-image: url("../img/inspiration-app.png");'></div>
+                                    style='background-image: url("../imgs/inspiration-app.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://amazing-raman-07d5be.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../img/landing-page.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("../imgs/landing-page.png");'>
                                 </div>
                             </a>
                         </div>
@@ -180,28 +180,28 @@
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://heuristic-benz-65e196.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../img/magaza.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("../imgs/magaza.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://cranky-williams-ea5b08.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../img/meer.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("../imgs/meer.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://nifty-booth-e758c2.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../img/remax.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("../imgs/remax.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://adoring-lichterman-05ea1a.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../img/reservation.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("../imgs/reservation.png");'>
                                 </div>
                             </a>
                         </div>
@@ -209,14 +209,14 @@
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://sleepy-brown-8c05c1.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../img/ugb.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("../imgs/ugb.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://mystifying-bardeen-9a0289.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../img/workflow.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("../imgs/workflow.png");'></div>
                             </a>
                         </div>
                     </div>
