--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://confident-thompson-c5ea7b.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../imgs/affiliate.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/affiliate.png");'>
                                 </div>
                             </a>
                         </div>
@@ -129,14 +129,14 @@
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://angry-haibt-965b5a.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../imgs/bandeja.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/bandeja.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://dazzling-fermat-e7d4cb.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../imgs/blueray.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/blueray.png");'></div>
                             </a>
                         </div>
                     </div>
@@ -144,21 +144,21 @@
                         <div class="my-work h-100">
                             <a class='target' href="https://vigorous-cori-ee1d4c.netlify.com/#secondPage"
                                 target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../imgs/boho.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/boho.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://naughty-lewin-fb311b.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../imgs/foton.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/foton.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://kind-einstein-ed8b3f.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../imgs/icons.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/icons.png");'></div>
                             </a>
                         </div>
                     </div>
@@ -166,14 +166,14 @@
                         <div class="my-work h-100">
                             <a class='target' href="https://lucid-lichterman-35a974.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap"
-                                    style='background-image: url("../imgs/inspiration-app.png");'></div>
+                                    style='background-image: url("imgs/inspiration-app.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://amazing-raman-07d5be.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../imgs/landing-page.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/landing-page.png");'>
                                 </div>
                             </a>
                         </div>
@@ -181,28 +181,28 @@
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://heuristic-benz-65e196.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../imgs/magaza.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/magaza.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://cranky-williams-ea5b08.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../imgs/meer.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/meer.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://nifty-booth-e758c2.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../imgs/remax.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/remax.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://adoring-lichterman-05ea1a.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../imgs/reservation.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/reservation.png");'>
                                 </div>
                             </a>
                         </div>
@@ -210,14 +210,14 @@
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://sleepy-brown-8c05c1.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../imgs/ugb.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/ugb.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://mystifying-bardeen-9a0289.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap" style='background-image: url("../imgs/workflow.png");'>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/workflow.png");'>
                                 </div>
                             </a>
                         </div>
