--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 <body>
 
     <body>
+        
+        <!-- scroll to top button -->
+
+        <div class="scroll-to-top">
+            <img src="imgs/back-to-top-arrow.png" alt="">
+        </div>
 
         <!-- HEADER -->
 
@@ -54,7 +60,7 @@
                         </div>
                     </div>
                 </div>
-                <a class="downlad-btn" href="Resume .pdf" target='_blank'>Download CV</a>
+                <a class="download-btn" href="Resume .pdf" target='_blank'>Download CV</a>
             </div>
         </header>
 
@@ -67,7 +73,7 @@
                     <div class="col-md-10 col-lg-8">
                         <div class="intro">
                             <div class="profile-img"><img src="imgs/avatar.png" alt=""></div>
-                            <h2><b>Mohamed Elsayed</b></h2>
+                            <h1><b>Mohamed Elsayed</b></h1>
                             <h4 class="font-blue">{ Front-end Developer }</h4>
                             <hr style='width:150px;margin:.5rem auto 0'>
                             <ul class="information my-5">
@@ -165,8 +171,8 @@
                     <div class="col-md-4">
                         <div class="my-work h-100">
                             <a class='target' href="https://lucid-lichterman-35a974.netlify.com/" target="_blank">
-                                <div class="fluidbox__wrap"
-                                    style='background-image: url("imgs/inspiration-app.png");'></div>
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/inspiration-app.png");'>
+                                </div>
                             </a>
                         </div>
                     </div>
@@ -234,12 +240,12 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="heading">
-                            <h3><b>About me</b></h3>
+                            <h3 class='text-white'><b>About me</b></h3>
                             <h6 class="font-lite-black"><b>PROFESSIONAL PATH</b></h6>
                         </div>
                     </div>
                     <div class="col-sm-8">
-                        <h3 class="mb-3">I’m a web designer and front-end web developer with over 5 years of
+                        <h3 class="mb-3 text-white">I’m a web designer and front-end web developer with over 5 years of
                             professional experience in the design industry.</h3>
                         <p class="mb-3">There is no simple rules when building a successful website. However by being
                             analytical, rigorous and critical it is possible to develop a system that can be useful when
@@ -249,26 +255,26 @@
                         <div class="row pt-3 text-center">
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
-                                    <div class="chart" data-percent="90">90%</div>
-                                    <h6 class="label font-weight-bold mt-3">HTML &amp; CSS</h6>
+                                    <div class="chart text-white" data-percent="90">90%</div>
+                                    <h6 class="label font-weight-bold mt-3 text-white">HTML &amp; CSS</h6>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
-                                    <div class="chart" data-percent="75">75%</div>
-                                    <h6 class="label font-weight-bold mt-3">JAVASCRIPT</h6>
+                                    <div class="chart text-white" data-percent="75">75%</div>
+                                    <h6 class="label text-white font-weight-bold mt-3">JAVASCRIPT</h6>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
-                                    <div class="chart" data-percent="85">85%</div>
-                                    <h6 class="label font-weight-bold mt-3">ANIMATION</h6>
+                                    <div class="chart text-white" data-percent="85">85%</div>
+                                    <h6 class="label text-white font-weight-bold mt-3">ANIMATION</h6>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
-                                    <div class="chart" data-percent="80">80%</div>
-                                    <h6 class="label font-weight-bold mt-3">WEB DESIGN</h6>
+                                    <div class="chart text-white" data-percent="80">80%</div>
+                                    <h6 class="label text-white font-weight-bold mt-3">WEB DESIGN</h6>
                                 </div>
                             </div>
                         </div>
@@ -284,10 +290,10 @@
                 <div class="row text-center">
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
                         <div class="counter">
-                            <h2 class="title display-3">
+                            <h2 class="title display-4">
                                 <b>
                                     <span class='numscroller' data-min='1' data-max='650' data-delay='10'
-                                        data-increment='10'>650</span>
+                                        data-increment='10'></span>
                                 </b>
                             </h2>
                             <h5 class="desc"><b>Coder Degrees</b></h5>
@@ -295,10 +301,10 @@
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
                         <div class="counter">
-                            <h2 class="title display-3">
+                            <h2 class="title display-4">
                                 <b>
                                     <span class='numscroller' data-min='1' data-max='55' data-delay='10'
-                                        data-increment='20'>55</span>
+                                        data-increment='20'></span>
                                 </b>
                             </h2>
                             <h5 class="desc"><b>Project Completed</b></h5>
@@ -306,10 +312,10 @@
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
                         <div class="counter">
-                            <h2 class="title display-3">
+                            <h2 class="title display-4">
                                 <b>
                                     <span class='numscroller' data-min='1' data-max='311' data-delay='50'
-                                        data-increment='50'>311</span>
+                                        data-increment='50'></span>
                                 </b>
                             </h2>
                             <h5 class="desc"><b>Satisfied Clients</b></h5>
@@ -317,10 +323,10 @@
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
                         <div class="counter">
-                            <h2 class="title display-3">
+                            <h2 class="title display-4">
                                 <b>
                                     <span class='numscroller' data-min='1' data-max='732' data-delay='50'
-                                        data-increment='50'>732</span>
+                                        data-increment='50'></span>
                                 </b>
                             </h2>
                             <h5 class="desc"><b>Finished Projects</b></h5>
@@ -333,31 +339,63 @@
         <!-- FOOTER -->
 
         <footer>
-            <p class="copyright text-white"> Copyright <span><b>©</b></span> <span><b>2020</b></span> All rights reserved </p>
+            <div class="container">
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-md-6">
+                        <p class="copyright text-white"> Copyright <span><b>©</b></span> <span><b>2020</b></span> All
+                            rights reserved </p>
+                    </div>
+                    <div class="col-md-6">
+                        <ul class="social-icons">
+                            <li>
+                                <a href="https://www.pinterest.com/mohamedelsayedhussein0/" target="_blank">
+                                    <i class="ion-logo-pinterest"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.linkedin.com/in/mohamed-elsayed-6055b2173/" target="_blank">
+                                    <i class="ion-logo-linkedin"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com/profile.php?id=100001110270139" target="_blank">
+                                    <i class="ion-logo-facebook"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/mohamedelsayedhussein" target="_blank">
+                                    <i class="ion-logo-github"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </footer>
 
         <!-- FOOTER SCRIPTS -->
 
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
         <script src="https://rendro.github.io/easy-pie-chart/javascripts/jquery.easy-pie-chart.js"></script>
-        <script src="numscroller-1.0.js"></script>
+        <script src="js/numscroller-1.0.js"></script>
+        <script src="js/custom.js"></script>
 
         <script>
-            $(window).scroll( function(){
-                $('.chart').each( function(i){
+            $(window).scroll(function () {
+                $('.chart').each(function (i) {
                     var bottom_of_object = $(this).offset().top + $(this).outerHeight();
                     var bottom_of_window = $(window).scrollTop() + $(window).height();
-                    if( bottom_of_window > bottom_of_object ){
+                    if (bottom_of_window > bottom_of_object) {
                         $('.chart').easyPieChart({
-                        lineWidth: 6,
-                        lineCap: 'square',
-                        barColor: "#22a7f0",
-                        scaleColor: '#22a7f0',
-                        trackColor: '#f7f7f7',
-                        easing: 'easeOutBounce',
-                        animate: 1000,
-                        onStep: function(from, to, percent) {
-                        $(this.el).find('.percent').text(Math.round(percent));
+                            lineWidth: 6,
+                            lineCap: 'square',
+                            barColor: "#22a7f0",
+                            scaleColor: '#22a7f0',
+                            trackColor: '#555',
+                            easing: 'easeOutBounce',
+                            animate: 1000,
+                            onStep: function (from, to, percent) {
+                                $(this.el).find('.percent').text(Math.round(percent));
                             }
                         });
                     }
