--- a/index.html
+++ b/index.html
@@ -185,6 +185,14 @@
                     </div>
                     <div class="col-md-4">
                         <div class="my-work h-100">
+                            <a class='target' href="https://brave-borg-6ae401.netlify.com/" target="_blank">
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/landing-page-2.png");'>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="my-work h-100">
                             <a class='target' href="https://heuristic-benz-65e196.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/magaza.png");'></div>
                             </a>
