--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                             <div class="info">
                                 <i class="icon ion-md-pin"></i>
                                 <div class="right-area">
-                                    <h5>Elmaadi</h5>
-                                    <h5>Cairo,Egypt</h5>
+                                    <h5>El Maadi</h5>
+                                    <h5>Cairo, Egypt</h5>
                                 </div>
                             </div>
                         </div>
@@ -43,7 +43,7 @@
                             <div class="info">
                                 <i class="icon ion-ios-call"></i>
                                 <div class="right-area">
-                                    <h5>011-22233312</h5>
+                                    <h5>+20 011-22233312</h5>
                                     <h6>All The Day, 9AM - 7PM</h6>
                                 </div>
                             </div>
@@ -257,7 +257,7 @@
                         <p class="mb-3">There is no simple rules when building a successful website. However by being
                             analytical, rigorous and critical it is possible to develop a system that can be useful when
                             making business decisions.</p>
-                        <p class="mb-5">I specialize in creating custom web sites for small businesses – focusing
+                        <p class="mb-5">I specialize in creating custom web sites for businesses – focusing
                             primarily on customor satisfied.</p>
                         <div class="row pt-3 text-center">
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
