--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                                         data-increment='20'></span>
                                 </b>
                             </h2>
-                            <h5 class="desc"><b>Project Completed</b></h5>
+                            <h5 class="desc"><b>Projects Working On It</b></h5>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
@@ -332,7 +332,7 @@
                         <div class="counter">
                             <h2 class="title display-4">
                                 <b>
-                                    <span class='numscroller' data-min='1' data-max='732' data-delay='50'
+                                    <span class='numscroller' data-min='1' data-max='432' data-delay='50'
                                         data-increment='50'></span>
                                 </b>
                             </h2>
