--- a/index.html
+++ b/index.html
@@ -297,6 +297,9 @@
                 <div class="row text-center">
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
                         <div class="counter">
+                            <div class="img">
+                                <img class='img-fluid' src="imgs/degree.png" alt="">
+                            </div>
                             <h2 class="title display-4">
                                 <b>
                                     <span class='numscroller' data-min='1' data-max='650' data-delay='10'
@@ -308,17 +311,23 @@
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
                         <div class="counter">
+                            <div class="img">
+                                <img class='img-fluid' src="imgs/w-hours.png" alt="">
+                            </div>
                             <h2 class="title display-4">
                                 <b>
-                                    <span class='numscroller' data-min='1' data-max='55' data-delay='10'
-                                        data-increment='20'></span>
+                                    <span class='numscroller' data-min='1' data-max='7585' data-delay='50'
+                                        data-increment='100'></span>
                                 </b>
                             </h2>
-                            <h5 class="desc"><b>Projects Working On It</b></h5>
+                            <h5 class="desc"><b>Working Hours</b></h5>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
                         <div class="counter">
+                            <div class="img">
+                                <img class='img-fluid' src="imgs/smile.png" alt="">
+                            </div>
                             <h2 class="title display-4">
                                 <b>
                                     <span class='numscroller' data-min='1' data-max='311' data-delay='50'
@@ -330,13 +339,16 @@
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
                         <div class="counter">
+                            <div class="img">
+                                <img class='img-fluid' src="imgs/cup.png" alt="">
+                            </div>
                             <h2 class="title display-4">
                                 <b>
-                                    <span class='numscroller' data-min='1' data-max='432' data-delay='50'
-                                        data-increment='50'></span>
+                                    <span class='numscroller' data-min='1' data-max='9432' data-delay='50'
+                                        data-increment='100'></span>
                                 </b>
                             </h2>
-                            <h5 class="desc"><b>Finished Projects</b></h5>
+                            <h5 class="desc"><b>Cup Of Coffee</b></h5>
                         </div>
                     </div>
                 </div>
