--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>Simple Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="shortcut icon" href="imgs/avatar.png">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
-        media="screen">
-    <link href="assets/ionicons.min.css" rel="stylesheet" media="screen">
-    <link href="assets/styles.css" rel="stylesheet" media="screen">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/ionicons.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap" rel="stylesheet">
+    <link href="assets/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -28,7 +27,7 @@
 
         <header>
             <div class="container">
-                <div class="heading-wrapper">
+                <div class="heading-wrapper wow fadeInDown animated">
                     <div class="row">
                         <div class="col-xl-4 col-lg-6 mb-md-0 mb-3">
                             <div class="info">
@@ -59,7 +58,7 @@
                         </div>
                     </div>
                 </div>
-                <a class="download-btn" href="Resume .pdf" target='_blank'>Download CV</a>
+                <a class="download-btn wow fadeInRight animated" href="Resume .pdf" target='_blank'>Download CV</a>
             </div>
         </header>
 
@@ -70,16 +69,18 @@
                 <div class="row">
                     <div class="col-md-1 col-lg-2"></div>
                     <div class="col-md-10 col-lg-8">
-                        <div class="intro">
-                            <div class="profile-img"><img src="imgs/avatar.png" alt=""></div>
-                            <h1><b>Mohamed Elsayed</b></h1>
-                            <h4 class="font-blue">{ Front-end Developer }</h4>
-                            <hr style='width:150px;margin:.5rem auto 0'>
-                            <ul class="information my-5">
-                                <li><b>BORN : </b>January 2, 1984</li>
-                                <li><b>EMAIL : </b>mohamedelsayedhussein0@gmail.com</li>
-                                <li><b>MARITAL STATUS : </b>Married</li>
-                            </ul>
+                        <div class="intro wow fadeInUp animated">
+                            <div class="profile-img wow fadeIn animated" data-wow-delay="0.3s"><img src="imgs/avatar.png" alt=""></div>
+                            <div>
+                                <h1><b>Mohamed Elsayed</b></h1>
+                                <h4 class="font-blue">{ Front-end Developer }</h4>
+                                <hr style='width:150px;margin:.5rem auto 0'>
+                                <ul class="information my-5">
+                                    <li><b>BORN : </b>January 2, 1984</li>
+                                    <li><b>EMAIL : </b>mohamedelsayedhussein0@gmail.com</li>
+                                    <li><b>MARITAL STATUS : </b>Married</li>
+                                </ul>
+                            </div>
                             <ul class="social-icons">
                                 <li>
                                     <a href="https://www.pinterest.com/mohamedelsayedhussein0/" target="_blank">
@@ -124,7 +125,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="my-work h-100">
+                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://confident-thompson-c5ea7b.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/affiliate.png");'>
                                 </div>
@@ -132,21 +133,21 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="my-work h-100">
+                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://angry-haibt-965b5a.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/bandeja.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="my-work h-100">
+                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://dazzling-fermat-e7d4cb.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/blueray.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="my-work h-100">
+                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://vigorous-cori-ee1d4c.netlify.com/#secondPage"
                                 target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/boho.png");'></div>
@@ -154,21 +155,21 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="my-work h-100">
+                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://naughty-lewin-fb311b.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/foton.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="my-work h-100">
+                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://kind-einstein-ed8b3f.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/icons.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="my-work h-100">
+                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://lucid-lichterman-35a974.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/inspiration-app.png");'>
                                 </div>
@@ -176,7 +177,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="my-work h-100">
+                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://amazing-raman-07d5be.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/landing-page.png");'>
                                 </div>
@@ -184,7 +185,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="my-work h-100">
+                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://brave-borg-6ae401.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/landing-page-2.png");'>
                                 </div>
@@ -192,28 +193,28 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="my-work h-100">
+                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://heuristic-benz-65e196.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/magaza.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="my-work h-100">
+                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://cranky-williams-ea5b08.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/meer.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="my-work h-100">
+                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://nifty-booth-e758c2.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/remax.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="my-work h-100">
+                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://adoring-lichterman-05ea1a.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/reservation.png");'>
                                 </div>
@@ -221,14 +222,14 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="my-work h-100">
+                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://sleepy-brown-8c05c1.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/ugb.png");'></div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="my-work h-100">
+                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://mystifying-bardeen-9a0289.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/workflow.png");'>
                                 </div>
@@ -243,15 +244,14 @@
 
         <section class="about-section section">
             <div class="container">
-                <hr class='mb-5'>
                 <div class="row">
-                    <div class="col-sm-4">
+                    <div class="col-sm-4 wow fadeInLeft animated" data-wow-delay="0.2s">
                         <div class="heading">
                             <h3 class='text-white'><b>About me</b></h3>
                             <h6 class="font-lite-black"><b>PROFESSIONAL PATH</b></h6>
                         </div>
                     </div>
-                    <div class="col-sm-8">
+                    <div class="col-sm-8 wow fadeInRight animated" data-wow-delay="0.2s">
                         <h3 class="mb-3 text-white">I’m a web designer and front-end web developer with over 5 years of
                             professional experience in the design industry.</h3>
                         <p class="mb-3">There is no simple rules when building a successful website. However by being
@@ -262,25 +262,25 @@
                         <div class="row pt-3 text-center">
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
-                                    <div class="chart text-white" data-percent="90">90%</div>
+                                    <div class="chart text-white wow animated rollIn" data-wow-delay=".3s" data-percent="90">90%</div>
                                     <h6 class="label font-weight-bold mt-3 text-white">HTML &amp; CSS</h6>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
-                                    <div class="chart text-white" data-percent="75">75%</div>
+                                    <div class="chart text-white wow animated rollIn" data-wow-delay=".3s" data-percent="75">75%</div>
                                     <h6 class="label text-white font-weight-bold mt-3">JAVASCRIPT</h6>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
-                                    <div class="chart text-white" data-percent="85">85%</div>
+                                    <div class="chart text-white wow animated rollIn" data-wow-delay=".3s" data-percent="85">85%</div>
                                     <h6 class="label text-white font-weight-bold mt-3">ANIMATION</h6>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-md-6 col-lg-3 mb-5 mb-lg-0">
                                 <div class="box">
-                                    <div class="chart text-white" data-percent="80">80%</div>
+                                    <div class="chart text-white wow animated rollIn" data-wow-delay=".3s" data-percent="80">80%</div>
                                     <h6 class="label text-white font-weight-bold mt-3">WEB DESIGN</h6>
                                 </div>
                             </div>
@@ -296,8 +296,8 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
-                        <div class="counter">
-                            <div class="img">
+                        <div class="counter wow fadeInLeft animated" data-wow-delay="0.7s">
+                            <div class="img wow animated rollIn" data-wow-delay=".8s">
                                 <img class='img-fluid' src="imgs/degree.png" alt="">
                             </div>
                             <h2 class="title display-4">
@@ -310,8 +310,8 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
-                        <div class="counter">
-                            <div class="img">
+                        <div class="counter wow fadeInLeft animated" data-wow-delay="0.7s">
+                            <div class="img wow animated rollIn" data-wow-delay=".8s">
                                 <img class='img-fluid' src="imgs/w-hours.png" alt="">
                             </div>
                             <h2 class="title display-4">
@@ -324,8 +324,8 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
-                        <div class="counter">
-                            <div class="img">
+                        <div class="counter wow fadeInRight animated" data-wow-delay=".7s">
+                            <div class="img wow animated rollIn" data-wow-delay=".8s">
                                 <img class='img-fluid' src="imgs/smile.png" alt="">
                             </div>
                             <h2 class="title display-4">
@@ -338,8 +338,8 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
-                        <div class="counter">
-                            <div class="img">
+                        <div class="counter wow fadeInRight animated" data-wow-delay=".7s">
+                            <div class="img wow animated rollIn" data-wow-delay=".8s">
                                 <img class='img-fluid' src="imgs/cup.png" alt="">
                             </div>
                             <h2 class="title display-4">
@@ -397,6 +397,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
         <script src="https://rendro.github.io/easy-pie-chart/javascripts/jquery.easy-pie-chart.js"></script>
         <script src="js/numscroller-1.0.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
         <script src="js/custom.js"></script>
 
         <script>
