--- a/index.html
+++ b/index.html
@@ -297,12 +297,12 @@
                 <div class="row text-center">
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
                         <div class="counter wow fadeInLeft animated" data-wow-delay="0.7s">
-                            <div class="img wow animated rollIn" data-wow-delay=".8s">
+                            <div class="img wow animated rollIn" data-wow-delay="1.2s">
                                 <img class='img-fluid' src="imgs/degree.png" alt="">
                             </div>
                             <h2 class="title display-4">
                                 <b>
-                                    <span class='numscroller' data-min='1' data-max='650' data-delay='10'
+                                    <span class='numscroller' data-min='1' data-max='650' data-delay='20'
                                         data-increment='10'></span>
                                 </b>
                             </h2>
@@ -311,13 +311,13 @@
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
                         <div class="counter wow fadeInLeft animated" data-wow-delay="0.7s">
-                            <div class="img wow animated rollIn" data-wow-delay=".8s">
+                            <div class="img wow animated rollIn" data-wow-delay="1.2s">
                                 <img class='img-fluid' src="imgs/w-hours.png" alt="">
                             </div>
                             <h2 class="title display-4">
                                 <b>
                                     <span class='numscroller' data-min='1' data-max='7585' data-delay='50'
-                                        data-increment='100'></span>
+                                        data-increment='50'></span>
                                 </b>
                             </h2>
                             <h5 class="desc"><b>Working Hours</b></h5>
@@ -325,13 +325,13 @@
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
                         <div class="counter wow fadeInRight animated" data-wow-delay=".7s">
-                            <div class="img wow animated rollIn" data-wow-delay=".8s">
+                            <div class="img wow animated rollIn" data-wow-delay="1.2s">
                                 <img class='img-fluid' src="imgs/smile.png" alt="">
                             </div>
                             <h2 class="title display-4">
                                 <b>
-                                    <span class='numscroller' data-min='1' data-max='311' data-delay='50'
-                                        data-increment='50'></span>
+                                    <span class='numscroller' data-min='1' data-max='311' data-delay='10'
+                                        data-increment='5'></span>
                                 </b>
                             </h2>
                             <h5 class="desc"><b>Satisfied Clients</b></h5>
@@ -339,13 +339,13 @@
                     </div>
                     <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
                         <div class="counter wow fadeInRight animated" data-wow-delay=".7s">
-                            <div class="img wow animated rollIn" data-wow-delay=".8s">
+                            <div class="img wow animated rollIn" data-wow-delay="1.2s">
                                 <img class='img-fluid' src="imgs/cup.png" alt="">
                             </div>
                             <h2 class="title display-4">
                                 <b>
                                     <span class='numscroller' data-min='1' data-max='9432' data-delay='50'
-                                        data-increment='100'></span>
+                                        data-increment='50'></span>
                                 </b>
                             </h2>
                             <h5 class="desc"><b>Cup Of Coffee</b></h5>
@@ -413,7 +413,7 @@
                             scaleColor: '#22a7f0',
                             trackColor: '#555',
                             easing: 'easeOutBounce',
-                            animate: 1000,
+                            animate: 2500,
                             onStep: function (from, to, percent) {
                                 $(this.el).find('.percent').text(Math.round(percent));
                             }
