--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://confident-thompson-c5ea7b.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/affiliate.png");'>
@@ -132,21 +132,21 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://angry-haibt-965b5a.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/bandeja.png");'></div>
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://dazzling-fermat-e7d4cb.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/blueray.png");'></div>
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://vigorous-cori-ee1d4c.netlify.com/#secondPage"
                                 target="_blank">
@@ -154,21 +154,21 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://naughty-lewin-fb311b.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/foton.png");'></div>
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://kind-einstein-ed8b3f.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/icons.png");'></div>
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://lucid-lichterman-35a974.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/inspiration-app.png");'>
@@ -176,7 +176,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://amazing-raman-07d5be.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/landing-page.png");'>
@@ -184,7 +184,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://brave-borg-6ae401.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/landing-page-2.png");'>
@@ -192,28 +192,28 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://heuristic-benz-65e196.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/magaza.png");'></div>
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://cranky-williams-ea5b08.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/meer.png");'></div>
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://nifty-booth-e758c2.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/remax.png");'></div>
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://adoring-lichterman-05ea1a.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/reservation.png");'>
@@ -221,14 +221,14 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://sleepy-brown-8c05c1.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/ugb.png");'></div>
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-md-6">
                         <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://mystifying-bardeen-9a0289.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/workflow.png");'>
