--- a/index.html
+++ b/index.html
@@ -230,6 +230,13 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
+                            <a class='target' href="https://relaxed-villani-2f57be.netlify.com/" target="_blank">
+                                <div class="fluidbox__wrap" style='background-image: url("imgs/blueelsokhna.png");'></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="my-work h-100 wow fadeInUp animated" data-wow-delay="0.2s">
                             <a class='target' href="https://mystifying-bardeen-9a0289.netlify.com/" target="_blank">
                                 <div class="fluidbox__wrap" style='background-image: url("imgs/workflow.png");'>
                                 </div>
