--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                         </div>
                     </div>
                 </div>
-                <a class="download-btn wow fadeInRight animated" href="Resume .pdf" target='_blank'>Download CV</a>
+                <a class="download-btn wow fadeInRight animated" href="Resume .pdf" target='_blank'>
+                    <span>Download CV</span>
+                </a>
             </div>
         </header>
 
@@ -365,35 +367,37 @@
         <!-- FOOTER -->
 
         <footer>
-            <div class="container">
-                <div class="row align-items-center justify-content-between">
-                    <div class="col-md-6">
-                        <p class="copyright text-white"> Copyright <span><b>©</b></span> <span><b>2020</b></span> All
-                            rights reserved </p>
-                    </div>
-                    <div class="col-md-6">
-                        <ul class="social-icons">
-                            <li>
-                                <a href="https://www.pinterest.com/mohamedelsayedhussein0/" target="_blank">
-                                    <i class="ion-logo-pinterest"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://www.linkedin.com/in/mohamed-elsayed-6055b2173/" target="_blank">
-                                    <i class="ion-logo-linkedin"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://www.facebook.com/profile.php?id=100001110270139" target="_blank">
-                                    <i class="ion-logo-facebook"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/mohamedelsayedhussein" target="_blank">
-                                    <i class="ion-logo-github"></i>
-                                </a>
-                            </li>
-                        </ul>
+            <div class="shape-footer">
+                <div class="container">
+                    <div class="row align-items-center justify-content-between">
+                        <div class="col-md-6">
+                            <p class="copyright text-white"> Copyright <span><b>©</b></span> <span><b>2020</b></span> All
+                                rights reserved </p>
+                        </div>
+                        <div class="col-md-6">
+                            <ul class="social-icons">
+                                <li>
+                                    <a href="https://www.pinterest.com/mohamedelsayedhussein0/" target="_blank">
+                                        <i class="ion-logo-pinterest"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.linkedin.com/in/mohamed-elsayed-6055b2173/" target="_blank">
+                                        <i class="ion-logo-linkedin"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.facebook.com/profile.php?id=100001110270139" target="_blank">
+                                        <i class="ion-logo-facebook"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://github.com/mohamedelsayedhussein" target="_blank">
+                                        <i class="ion-logo-github"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
